# dbt-sample

./: .gitignore  dbt_project.yml  pyproject.toml
models/: source.yml
models/datawarehouse/: sunshine_time.sql  temperature.sql
models/mart/: ine.sql
sample_data/: README.md  ine.csv  weather_2015.csv  weather_2016.csv  weather_2017.csv  weather_2018.csv  weather_2019.csv  weather_2020.csv  weather_2021.csv
terraform/fivetran/: .terraform.lock.hcl  main.tf  provider.tf  variables.tf
