[tool.poetry]
name = "dbt-with-fivetran-sample"
version = "0.1.0"
description = ""
authors = ["Masahiro Ishii <marufeuille@gmail.com>"]
readme = "README.md"
packages = [{include = "dbt_with_fivetran_sample"}]

[tool.poetry.dependencies]
python = "^3.10"
dbt-bigquery = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
